# AutoVsSelfHealing

./: 001-deploy-API.bat  002-deploy-UX.bat  0020-tagversion.bat  003-Run-UnitTests.bat  004-Run-UxTests.bat  005-up.bat  006-down.bat  007-swarminit.bat  008-stack.bat  009-CheckStack.bat  010-stackscale.bat  011-DockerSwarmVisualizer.bat  012-PushToHub.bat  012-swarmpit.bat  013-swarmleave.bat  019-PushToHub.bat  020-tagversion.bat  README.MD  apideploy.bat  docker-compose.yaml  docker-stack.yml  pyproject.toml  report.html  ux-test-report.html
api/: MyPyCalc.py
apipostmanCollection/: SelfHealingExample.postman_collection.json
apitest/: TestMyPyCalc.py
app/api/: Dockerfile.api  MyPyCalc.py  container.bat  image.bat
app/db/: Dockerfile.db  app.py  container.bat  image.bat  insert.bat  requirements.txt
app/ux/: Dockerfile.ux  app.py  container.bat  image.bat  index.html
apptest/apitest/: TestMyPyCalc.py
apptest/apitest/apipostmanCollection/: SelfHealingExample.postman_collection.json
apptest/uxtest/: CustomTestLoader.py  uxtest.py
ux/: app.py  index.html
uxtest/: uxtest.py
